--- a/application1/build.gradle
+++ b/application1/build.gradle
@@ -2,6 +2,7 @@
 plugins {
     id 'java'
     id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.10'
 }
 
 group 'org.example'
@@ -9,6 +10,11 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+}
+
+javafx{
+    version = '17'
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
 dependencies {
@@ -25,5 +31,5 @@ run {
 }
 
 application {
-    mainClass = "Application"
+    mainClass = "baseline.MainApp"
 }
